# LeatherTextureMatcher

./: TextureClassifier.py  dataset_utils.py  metrics.py  optimizer.py  predict.py  readme.markdown  皮革纹理匹配-项目说明文档.docx
deploy/onnx/: CMakeLists.txt  leather.cpp
deploy/onnx/pyTools/: onnx_infer.cpp  onnx_predict.py  pth2onnx.py
deploy/onnx/test/: CMakeLists.txt  test.cpp
deploy/openvino/: TextureClassifierModel.mapping  TextureClassifierModel.xml
deploy/openvino/pyTools/: complie_mdoel.py  infer.py
models/resnet18_c2_0.8525/: config.ini
models/resnet18_c40_0.9889/: config.ini
tools/: RandomCropImg.py  train_test_split.py
